--- a/home.css
+++ b/home.css
@@ -1,13 +1,47 @@
 /* home.css */
 
 body {
-    background-color: #193737;
-    text-align: center;
+    background-color: #1f1f1f;
+    color: #808080;
     font-family: DejaVu Sans Mono, monospace;
 }
 
-h1 {
+.header-text {
+    text-align: center;
+}
+
+.header-text h6 {
+    font-size: 30px;
     padding-top: 100px;
-    font-size: 50px;
-    color: #fff0db
+    margin: 0;
+}
+
+.header-text h1 {
+    font-size: 60px;
+    padding-top: 10px;
+    margin: 0;
+}
+
+.menu-list {
+    text-align: center;
+    list-style-type: none;
+    padding-top: 70px;
+}
+
+.menu-list li {
+    display: block;
+    padding: 5px;
+}
+
+.menu-list li a {
+    text-align: center;
+    font-size: 30px;
+    color: inherit;
+    transition: .5s;
+    text-decoration: none;
+}
+
+.menu-list li a:hover {
+    color: #ffffff;
+    text-shadow: 0 0 5px #ffffff;
 }
