--- a/home.css
+++ b/home.css
@@ -4,36 +4,32 @@ body {
     background-color: #1f1f1f;
     color: #808080;
     font-family: DejaVu Sans Mono, monospace;
-}
-
-.header-text {
     text-align: center;
 }
 
-.header-text h6 {
+h6 {
     font-size: 30px;
     padding-top: 100px;
     margin: 0;
 }
 
-.header-text h1 {
+h1 {
     font-size: 60px;
     padding-top: 10px;
     margin: 0;
 }
 
-.menu-list {
+ul {
     text-align: center;
     list-style-type: none;
-    padding-top: 70px;
+    padding-top: 50px;
 }
 
-.menu-list li {
-    display: block;
+ul li {
     padding: 5px;
 }
 
-.menu-list li a {
+ul li a {
     text-align: center;
     font-size: 30px;
     color: inherit;
@@ -41,7 +37,7 @@ body {
     text-decoration: none;
 }
 
-.menu-list li a:hover {
+ul li a:hover {
     color: #ffffff;
     text-shadow: 0 0 5px #ffffff;
 }
