--- a/aboutme.css
+++ b/aboutme.css
@@ -28,3 +28,33 @@ h1 {
     font-size: 45px;
     margin-top: -50px;
 }
+
+.row {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.aboutme-col-1 {
+	flex-basis: 35%;
+}
+
+.aboutme-col-1 img {
+	margin-left: 50px;
+    margin-top: 20px;
+	width: 80%;
+	border-radius: 15px;
+}
+
+.aboutme-col-2 {
+	flex-basis: 65%;
+}
+
+.aboutme-col-2 h1 {
+    margin-top: 30px;
+}
+
+.aboutme-col-2 p {
+    text-align: left;
+    font-size: 20px;
+}
