--- a/coursehist.css
+++ b/coursehist.css
@@ -46,6 +46,10 @@ h1 {
     padding-left: 30px;
 }
 
+.third-year .fall-2023 .courses li {
+    padding-top: 10px;
+}
+
 .third-year .winter-2024 h3 {
     font-size: 30px;
     margin-top: -5px;
@@ -57,6 +61,10 @@ h1 {
     padding-left: 30px;
 }
 
+.third-year .winter-2024 .courses li {
+    padding-top: 10px;
+}
+
 .third-year .spring-2024 h3 {
     font-size: 30px;
     margin-top: -5px;
@@ -66,6 +74,10 @@ h1 {
     font-size: 25px;
     margin-top: -25px;
     padding-left: 30px;
+}
+
+.third-year .spring-2024 .courses li {
+    padding-top: 10px;
 }
 
 /* second year */
@@ -85,6 +97,10 @@ h1 {
     padding-left: 30px;
 }
 
+.second-year .fall-2022 .courses li {
+    padding-top: 10px;
+}
+
 .second-year .winter-2023 h3 {
     font-size: 30px;
     margin-top: -5px;
@@ -96,6 +112,10 @@ h1 {
     padding-left: 30px;
 }
 
+.second-year .winter-2023 .courses li {
+    padding-top: 10px;
+}
+
 .second-year .spring-2023 h3 {
     font-size: 30px;
     margin-top: -5px;
@@ -105,6 +125,10 @@ h1 {
     font-size: 25px;
     margin-top: -25px;
     padding-left: 30px;
+}
+
+.second-year .spring-2023 .courses li {
+    padding-top: 10px;
 }
 
 /* first year */
@@ -123,6 +147,10 @@ h1 {
     padding-left: 30px;
 }
 
+.first-year .fall-2021 .courses li {
+    padding-top: 10px;
+}
+
 .first-year .winter-2022 h3 {
     font-size: 30px;
     margin-top: -5px;
@@ -134,6 +162,10 @@ h1 {
     padding-left: 30px;
 }
 
+.first-year .winter-2022 .courses li {
+    padding-top: 10px;
+}
+
 .first-year .spring-2022 h3 {
     font-size: 30px;
     margin-top: -5px;
@@ -143,4 +175,8 @@ h1 {
     font-size: 25px;
     margin-top: -25px;
     padding-left: 30px;
+}
+
+.first-year .spring-2022 .courses li {
+    padding-top: 10px;
 }
