--- a/honors.css
+++ b/honors.css
@@ -1,4 +1,4 @@
-/* education.css */
+/* honors.css */
 
 body {
     background-color: #1f1f1f;
@@ -29,9 +29,9 @@ h1 {
     margin-top: -50px;
 }
 
-h3 {
-    font-size: 35px;
+h2 {
     padding-top: 10px;
+    font-size: 40px;
 }
 
 ul {
@@ -42,4 +42,5 @@ ul {
 
 li {
     padding-top: 10px;
+    margin-right: 30px;
 }
